# resonanceReconstruction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ContinuousIntegration.yml
cmake/: develop_dependencies.cmake  release_dependencies.cmake  resonanceReconstruction_dependencies.cmake  unit_testing.cmake
metaconfigure/: description.json
python/src/: conversion.hpp  resonanceReconstruction.python.cpp  views.hpp
python/src/rmatrix/: Boundary.python.cpp  ChannelQuantumNumbers.python.cpp  ChannelRadii.python.cpp  Formalism.python.cpp  Particle.python.cpp  ParticleChannel.python.cpp  ParticleChannelData.python.cpp  ParticlePair.python.cpp  Resonance.python.cpp  ResonanceTable.python.cpp  SpinGroup.python.cpp
python/test/: Test_r2_Boundary.py  Test_r2_ChannelQuantumNumbers.py  Test_r2_ChannelRadii.py  Test_r2_Formalism.py  Test_r2_Particle.py  Test_r2_ParticleChannel.py  Test_r2_ParticleChannelData.py  Test_r2_ParticlePair.py  Test_r2_Resonance.py  Test_r2_ResonanceTable.py
src/: resonanceReconstruction.hpp
src/resonanceReconstruction/: Channel.hpp  EnergyRange.hpp  Map.hpp  Matrix.hpp  Particle.hpp  ParticlePair.hpp  Quantity.hpp  QuantumNumbers.hpp  ZeroWidth.hpp  breitWigner.hpp  endf.hpp  pack.hpp  reichMoore.hpp  rmatrix.hpp  singleLevelBreitWigner.hpp
src/resonanceReconstruction/breitWigner/: CRTP.hpp  CrossSection.hpp  Type.hpp  lvalue.hpp  multiLevel.hpp  multilevel.hpp  resonance.hpp  singleLevel.hpp
src/resonanceReconstruction/breitWigner/singleLevel/Lvalue/test/: CMakeLists.txt  Lvalue.test.cpp  call.test.cpp  call.test.hpp  penetrationShift.hpp  penetrationShift.test.cpp  penetrationShift.test.hpp  phaseShift.test.cpp  phaseShift.test.hpp
src/resonanceReconstruction/reichMoore/: Apply.hpp  Base.hpp  Inspector.hpp  Lvalue.hpp  Resonance.hpp  Type.hpp
src/resonanceReconstruction/rmatrix/: BaseResonance.hpp  BaseResonanceTable.hpp  BoundaryCondition.hpp  BoundaryOption.hpp  Channel.hpp  ChannelID.hpp  ChannelQuantumNumbers.hpp  ChannelRadii.hpp  ChannelRadiusTable.hpp  ChannelType.hpp  ChannelTypes.hpp  CompoundNucleus.hpp  Map.hpp  (+31 more)
src/resonanceReconstruction/rmatrix/BaseResonance/test/: BaseResonance.test.cpp  CMakeLists.txt
src/resonanceReconstruction/rmatrix/BaseResonanceTable/test/: BaseResonanceTable.test.cpp  CMakeLists.txt
src/resonanceReconstruction/rmatrix/Channel/test/: CMakeLists.txt  Channel.test.cpp  changeQ.test.cpp  incident.test.cpp
src/resonanceReconstruction/rmatrix/ChannelQuantumNumbers/test/: CMakeLists.txt  ChannelQuantumNumbers.test.cpp
src/resonanceReconstruction/rmatrix/ChannelRadii/test/: CMakeLists.txt  ChannelRadii.test.cpp
src/resonanceReconstruction/rmatrix/ChannelRadiusTable/test/: CMakeLists.txt  ChannelRadiusTable.test.cpp
src/resonanceReconstruction/rmatrix/CompoundSystem/test/: CMakeLists.txt  Ca40-endf80.cpp  CompoundSystem.test.cpp  CompoundSystem.test.hpp  Fe54-endf80.cpp  Fe57-endf80.cpp  evaluate.test.cpp  evaluate.test.hpp  evaluateTMatrix.test.cpp  evaluateTMatrix.test.hpp
src/resonanceReconstruction/rmatrix/LMatrixCalculator/Constant/test/: CMakeLists.txt  Constant.test.cpp
src/resonanceReconstruction/rmatrix/LMatrixCalculator/ShiftFactor/test/: CMakeLists.txt  ShiftFactor.test.cpp
src/resonanceReconstruction/rmatrix/ParticleChannelData/test/: CMakeLists.txt  ParticleChannelData.test.cpp
src/resonanceReconstruction/rmatrix/ParticlePair/test/: CMakeLists.txt  ParticlePair.test.cpp  changeQ.test.cpp  functions.test.cpp  incident.test.cpp
src/resonanceReconstruction/rmatrix/RLMatrixCalculator/ReichMoore/test/: CMakeLists.txt  ReichMoore.test.cpp
src/resonanceReconstruction/rmatrix/Resonance/test/: CMakeLists.txt  Resonance.test.cpp  Resonance.test.hpp  rmatrix.test.cpp  rmatrix.test.hpp
src/resonanceReconstruction/rmatrix/ResonanceTable/test/: CMakeLists.txt  ResonanceTable.test.cpp  rmatrix.test.cpp
src/resonanceReconstruction/rmatrix/SpinGroup/test/: CMakeLists.txt  SpinGroup.test.cpp  SpinGroup.test.hpp  evaluate-reichmoore.test.cpp  evaluate.test.cpp  evaluate.test.hpp  evaluateTMatrix-reichmoore.test.cpp  evaluateTMatrix.test.cpp  evaluateTMatrix.test.hpp  switchIncidentPair.test.cpp
src/resonanceReconstruction/rmatrix/UnresolvedResonance/test/: CMakeLists.txt  UnresolvedResonance.test.cpp
src/resonanceReconstruction/rmatrix/UnresolvedResonanceTable/test/: CMakeLists.txt  UnresolvedResonanceTable.test.cpp  UnresolvedResonanceTable.test.hpp  call.test.hpp
src/resonanceReconstruction/rmatrix/legacy/Data/test/: CMakeLists.txt  Data.test.cpp
src/resonanceReconstruction/rmatrix/legacy/resolved/CompoundSystem/test/: CMakeLists.txt  CompoundSystem.test.cpp  CompoundSystem.test.hpp  evaluate.test.hpp
src/resonanceReconstruction/rmatrix/legacy/resolved/Resonance/test/: CMakeLists.txt  Resonance.test.cpp
src/resonanceReconstruction/rmatrix/legacy/resolved/SpinGroup/test/: CMakeLists.txt  SpinGroup.test.cpp  SpinGroup.test.hpp  evaluate.test.hpp
src/resonanceReconstruction/rmatrix/legacy/unresolved/CompoundSystem/test/: CMakeLists.txt  CompoundSystem.test.cpp  CompoundSystem.test.hpp  evaluate.test.hpp
src/resonanceReconstruction/rmatrix/legacy/unresolved/Resonance/test/: CMakeLists.txt  Resonance.test.cpp
src/resonanceReconstruction/rmatrix/legacy/unresolved/ResonanceTable/test/: CMakeLists.txt  ResonanceTable.test.cpp  ResonanceTable.test.hpp  call.test.hpp
src/resonanceReconstruction/rmatrix/legacy/unresolved/SpinGroup/test/: CMakeLists.txt  SpinGroup.test.cpp  SpinGroup.test.hpp  evaluate.test.hpp
src/resonanceReconstruction/rmatrix/legacy/unresolved/test/: CMakeLists.txt  calculateFluctuationIntegrals.test.hpp  unresolved.test.cpp
src/resonanceReconstruction/singleLevelBreitWigner/Base/Lvalue/test/: CMakeLists.txt  Lvalue.test.cpp  call.test.cpp  penetrationShift.test.cpp  phaseShift.test.cpp  waveNumber.test.cpp
src/resonanceReconstruction/singleLevelBreitWigner/test/: CMakeLists.txt  channelRadius.test.cpp  neutronWaveNumber.test.cpp  penetrationShift.test.cpp  phaseShift.test.cpp  radius.test.cpp
src/utility/: horner.hpp  overload.hpp
(+387 files in other folders)
